--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next": "^21.10.0",
     "js-yaml": "^4.1.0",
     "json-rpc-2.0": "^1.7.0",
+    "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "memory-cache": "^0.2.0",
     "minecraft-ping-js": "^1.0.2",
