--- a/.github/workflows/pr_test.yml
+++ b/.github/workflows/pr_test.yml
@@ -1,7 +1,7 @@
 name: Endor Labs Dependency and Secrets Scan Monitoring
 on:
   pull_request:
-    branches: [ new_main]
+    branches: [ main ]
   workflow_dispatch:
 jobs:
   scan:
