--- a/.github/workflows/pr_test.yml
+++ b/.github/workflows/pr_test.yml
@@ -26,5 +26,7 @@ jobs:
       uses: endorlabs/github-action@v1.1.2
       with:
         namespace: 'scott-learn'
+        api_key: ${{ secrets.ENDOR_API_CREDENTIALS_KEY }}
+        api_secret: ${{ secrets.ENDOR_API_CREDENTIALS_SECRET }}
         enable_github_action_token: false
        
